<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AlarmFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer3"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHor1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <NumberPicker
        android:id="@+id/npHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:theme="@style/NumberPickerText"
        app:layout_constraintBottom_toBottomOf="@id/glHor1"
        app:layout_constraintEnd_toStartOf="@id/glVer3"
        app:layout_constraintTop_toTopOf="@id/glHor1" />

    <NumberPicker
        android:id="@+id/npMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:theme="@style/NumberPickerText"
        app:layout_constraintBottom_toBottomOf="@id/glHor1"
        app:layout_constraintStart_toEndOf="@id/glVer3"
        app:layout_constraintTop_toTopOf="@id/glHor1" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/internation_time_item_background"
        android:hint="@string/alarm_label"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/npHour" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/alarm_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/glVer3"
        app:layout_constraintStart_toStartOf="@id/glVer3"
        app:layout_constraintTop_toBottomOf="@id/etMessage" />

    <Button
        android:id="@+id/btSetAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/alarm_set_alarm"
        app:layout_constraintEnd_toEndOf="@id/glVer3"
        app:layout_constraintStart_toStartOf="@id/glVer3"
        app:layout_constraintTop_toBottomOf="@id/tvTime" />

    <Button
        android:id="@+id/btTurnOffAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/alarm_turn_off_alarm"
        app:layout_constraintEnd_toEndOf="@id/glVer3"
        app:layout_constraintStart_toStartOf="@id/glVer3"
        app:layout_constraintTop_toBottomOf="@id/btSetAlarm" />
</androidx.constraintlayout.widget.ConstraintLayout>